Completely downloaded all required images to assets folder

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <main>
         <div class="jumbotron">
             <div class="clearfix"></div>
-            <a href="https://codeclub.com.ua/" target="_blank"><img class="code-club-logo" src="https://codeclub.com.ua/img/header-logo-img.svg" alt="Code Club UA" /></a>
+            <a href="https://codeclub.com.ua/" target="_blank"><img class="code-club-logo" src="assets/codeclub-ua-logo.svg" alt="Code Club UA" /></a>
         </div>
         <p>
             Сторінку створено за підтримки та в рамках проекту <a href="https://https://codeclub.com.ua/" target="_blank">Code Club UA</a>
