--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <div class="jumbotron">
             <h1>Ми &mdash; нове покоління</h1>
             <p>
-                <img src="https://img.freepik.com/free-photo/children-playing-grass_1098-504.jpg?size=626&ext=jpg" class="group-photo" alt="це наше фото" />
+                <img src="assets/kids-photo.jpg" class="group-photo" alt="це наше фото" />
                 <strong>Всім привіт!</strong> Ми &mdash; нове покоління! Ми креативні, веселі, розумні та допитливі.
                 Ми досліджуємо, відкриваємо, експерементуємо та взагалі весело проводимо час разом.
                 Ми хочемо досягати нових вершин, творити, відкривати нове та ділитися цим з усім світом.
             </p>
             <p>Вітаємо вас на нашій сторінці! <a href="about.html">Докладніше...</a></p>
             <div class="clearfix"></div>
-            <a href="https://codeclub.com.ua/" target="_blank"><img class="code-club-logo" src="https://codeclub.com.ua/img/header-logo-img.svg" alt="Code Club UA" /></a>
+            <a href="https://codeclub.com.ua/" target="_blank"><img class="code-club-logo" src="assets/codeclub-ua-logo.svg" alt="Code Club UA" /></a>
         </div>
         <div class="our-works">
             <p>
@@ -35,25 +35,25 @@
         </div>
         <div class="our-works">
             <div class="work-thumbnail rotate">
-                <img src="https://t4.ftcdn.net/jpg/02/07/87/79/360_F_207877921_BtG6ZKAVvtLyc5GWpBNEIlIxsffTtWkv.jpg">
+                <img src="assets/site-thumbnail.jpg">
                 <div class="work-title">
                     Це приклад роботи
                 </div>
             </div>
             <div class="work-thumbnail rotate">
-                <img src="https://t4.ftcdn.net/jpg/02/07/87/79/360_F_207877921_BtG6ZKAVvtLyc5GWpBNEIlIxsffTtWkv.jpg">
+                <img src="assets/site-thumbnail.jpg">
                 <div class="work-title">
                     Це приклад роботи
                 </div>
             </div>
             <div class="work-thumbnail rotate">
-                <img src="https://t4.ftcdn.net/jpg/02/07/87/79/360_F_207877921_BtG6ZKAVvtLyc5GWpBNEIlIxsffTtWkv.jpg">
+                <img src="assets/site-thumbnail.jpg">
                 <div class="work-title">
                     Це приклад роботи
                 </div>
             </div>
             <div class="work-thumbnail rotate">
-                <img src="https://t4.ftcdn.net/jpg/02/07/87/79/360_F_207877921_BtG6ZKAVvtLyc5GWpBNEIlIxsffTtWkv.jpg">
+                <img src="assets/site-thumbnail.jpg">
                 <div class="work-title">
                     Це приклад роботи
                 </div>
