Added links to GitHub education and GitHub pages to footer

--- a/index.html
+++ b/index.html
@@ -63,10 +63,14 @@
     <footer>
         <div class="column"><p>Просимо Вас поважати наше авторське право &copy; 2021</p></div>
         <div class="column" style="text-align: center;">
-            Створено з
+            <small>Створено з &nbsp;&nbsp;</small>
+            <a href="https://pages.github.com/" target="_blank">
+                <img src="assets/GitHub-Mark-32px.png" height="16" alt="GitHub">
+                GitHub Pages
+            </a>
             <a href="https://education.github.com/" target="_blank">
                 <img src="assets/GitHub-Mark-32px.png" height="16" alt="GitHub">
-                <strong>GitHub Pages</strong>
+                GitHub Education
             </a>
         </div>
         <div class="column"></div>
