Arranged links to GitHub in footer

--- a/about.html
+++ b/about.html
@@ -30,13 +30,15 @@
     <footer>
         <div class="column"><p>Просимо Вас поважати наше авторське право &copy; 2021</p></div>
         <div class="column footer-center">
-            <small>Створено з &nbsp;&nbsp;</small>
+            <small>Створено з</small>
+            &nbsp;&nbsp;
+            <img src="assets/GitHub-Mark-32px.png" style="position: relative; top: 3px" height="16" alt="GitHub">
+            &nbsp;&nbsp;
             <a href="https://pages.github.com/" target="_blank">
-                <img src="assets/GitHub-Mark-32px.png" height="16" alt="GitHub">
                 GitHub Pages
             </a>
+            &nbsp;&nbsp;
             <a href="https://education.github.com/" target="_blank">
-                <img src="assets/GitHub-Mark-32px.png" height="16" alt="GitHub">
                 GitHub Education
             </a>
         </div>
