--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                 GitHub Education
             </a>
         </div>
-        <div class="column"></div>
+        <div class="column">&nbsp;</div>
     </footer>
 </body>
 </html>
