--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 GitHub Education
             </a>
         </div>
-        <div class="column"></div>
+        <div class="column">&nbsp;</div>
     </footer>
 </body>
 </html>
